RESOLVED FIXED304441
[subpixel-inline-layout] Fix imported/w3c/web-platform-tests/css/css-grid/subgrid/grid-gap-007.html
https://bugs.webkit.org/show_bug.cgi?id=304441
Summary [subpixel-inline-layout] Fix imported/w3c/web-platform-tests/css/css-grid/sub...
alan
Reported 2025-12-18 14:27:51 PST
ssia
Attachments
fast-cq]Patch (2.78 KB, patch)
2025-12-18 14:30 PST, alan
no flags
alan
Comment 1 2025-12-18 14:30:49 PST
Created attachment 477782 [details] fast-cq]Patch
EWS
Comment 2 2025-12-19 07:57:12 PST
Committed 304751@main (7c994a01821e): <https://commits.webkit.org/304751@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477782 [details].
Radar WebKit Bug Importer
Comment 3 2025-12-19 07:58:13 PST
Note You need to log in before you can comment on or make changes to this bug.