[subpixel-inline-layout] Fix imported/w3c/web-platform-tests/css/css-grid/subgrid/grid-gap-007.html https://bugs.webkit.org/show_bug.cgi?id=304441

Reviewed by Antti Koivisto.

Add ascent rounding required by CTM rotation (vertical content) - currently it is achieved by implicit integral rounding.

* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::TextBoxPainter::computePaintRect):
(WebCore::TextBoxPainter::textOriginFromPaintRect const):

Canonical link: https://commits.webkit.org/304751@main